#5- Agregando o processamentos das duas instancias.